<resources>
    <string name="app_name">Chap2.2</string>
    <string name="mau_makan_apa_hari_ini">Mau makan apa hari ini?</string>
    <string name="hai_binarian">Hai Binarian,</string>
    <string name="diskon_30">Diskon 30%</string>
    <string name="pesan_makanan_lewat_aplikasi">Pesan makanan lewat aplikasi</string>
    <string name="minuman">Minuman</string>
    <string name="snack">Snack</string>
    <string name="mie">Mie</string>
    <string name="nasi">Nasi</string>
    <string name="list_menu_makan">List Menu Makan</string>
    <string name="ayam_bakar">Ayam Bakar</string>
    <string name="rp_50_000">Rp 50.000</string>
    <string name="ayam_goreng">Ayam Goreng</string>
    <string name="rp_40_000">Rp 40.000</string>
    <string name="sate_usus_ayam">Sate Usus Ayam</string>
    <string name="rp_5_000">Rp 5.000</string>
    <string name="ayam_geprek">Ayam Geprek</string>
    <string name="dan_dapatkan_diskonmu">dan dapatkan diskonmu</string>
    <string name="keranjang">Keranjang</string>
    <string name="user">User</string>
    <string name="iklan_discount_30">Iklan discount 30%</string>
    <string name="kategori_nasi">Kategori nasi</string>
    <string name="kategori_mie">Kategori mie</string>
    <string name="kategori_snack">Kategori snack</string>
    <string name="kategori_minuman">Kategori minuman</string>
    <string name="button_list_layout">button list layout</string>
    <string name="list_layout">list layout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="foto_profile">Foto Profile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Email">\n</string>
    <string name="email">Email</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="regapwg">Regapwg</string>
    <string name="regapwg_gmail_com">regapwg@gmail.com</string>
    <string name="hidden">*****</string>
    <string name="_0898888888">0898888888</string>
    <string name="button_edit">Button Edit</string>


</resources>